wiki-chart/templates/fastapi-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fastapi
spec:
  selector:
    app: fastapi
  ports:
  - port: 8000
    targetPort: 8000
