wiki-chart/templates/grafana_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: grafana
  labels:
    app: grafana
spec:
  type: NodePort
  selector:
    app: grafana
  ports:
    - port: 3000  # Cluster port
      targetPort: 3000 # Container port
      nodePort: 30030  # NodePort you can access from host
