wiki-chart/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wiki-ingress
spec:
  rules:
  - host: wiki.local
    http:
      paths:
      - path: /users
        pathType: Prefix
        backend:
          service:
            name: fastapi
            port:
              number: 8000
      - path: /posts
        pathType: Prefix
        backend:
          service:
            name: fastapi
            port:
              number: 8000
      - path: /grafana
        pathType: Prefix
        backend:
          service:
            name: grafana
            port:
              number: 3000
